# coding_exercise

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
src/: CMakeLists.txt  main.cpp  output_option.h  text_analyze.cpp  text_analyze.h
tests/: CMakeLists.txt
tests/unit_tests/: test_text_analyze.cpp
